--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,3 +1,21 @@
+<!-- .storybook/preview-head.html -->
+<style>
+  html {
+    -webkit-font-smoothing: antialiased;
+  }
+</style>
 <script>
   window.global = window;
+  const _historyWrap = function (type) {
+    const orig = history[type];
+    const e = new Event(type);
+    return function () {
+      const rv = orig.apply(this, arguments);
+      e.arguments = arguments;
+      window.dispatchEvent(e);
+      return rv;
+    };
+  };
+  history.pushState = _historyWrap("pushState");
+  history.replaceState = _historyWrap("replaceState");
 </script>
